--- a/css/style.css
+++ b/css/style.css
@@ -599,7 +599,6 @@ header .container nav ul li {
 }
 
 footer {
-  position: relative;
   background-color: #000;
   color: #c0c0c0;
   padding: 60px 20px;
@@ -608,16 +607,14 @@ footer {
 footer .footer-container {
   max-width: 1200px;
   margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-  gap: 40px;
 }
 footer .footer-top {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   gap: 40px;
+  border-bottom: 2px solid white;
+  padding-bottom: 36px;
 }
 footer .footer-logo {
   margin-top: 100px;
@@ -634,7 +631,8 @@ footer .footer-logo p {
 }
 footer .footer-links {
   display: flex;
-  gap: 16px;
+  flex-wrap: wrap;
+  gap: 55px;
   margin-top: 100px;
 }
 footer .footer-links .links-column .column-title {
@@ -666,164 +664,67 @@ footer .footer-links .links-column ul li a:hover {
   transition: 0.3s ease;
 }
 footer .footer-newsletter {
-  display: block;
-  position: absolute;
-  bottom: 100px;
-}
-footer .footer-newsletter .newsletter-text {
-  position: absolute;
-  bottom: 20px;
-  left: 0;
-}
-footer .footer-newsletter .newsletter-text::before {
-  content: "";
-  display: block;
-  width: 1200px;
-  height: 1px;
-  background-color: #333;
-  position: absolute;
-  top: -20px;
-  left: 0;
-}
-footer .footer-newsletter .column-title {
-  display: ruby-text;
-  font-family: "Poppins", sans-serif;
-  font-size: 14px;
-  letter-spacing: 0.14em;
-  text-transform: uppercase;
-  margin-bottom: 10px;
-  color: #fff;
-}
-footer .footer-newsletter p {
-  margin-bottom: 15px;
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  font-size: 13px;
-  line-height: 154%;
-  color: #c0c0c0;
-}
-footer .footer-newsletter .footer-form {
-  position: absolute;
-  left: 741px;
-  width: 458px;
-  bottom: 40px;
-}
-footer .footer-newsletter .footer-form form {
   display: flex;
-  border: 1px solid #fff;
-  border-radius: 8px;
-  overflow: hidden;
-}
-footer .footer-newsletter .footer-form form input {
-  flex: 1;
-  padding: 10px;
-  border: none;
-  background: #fff;
-  color: #000;
-}
-footer .footer-newsletter .footer-form form button {
-  background: #000;
-  color: #fff;
-  border: none;
-  padding: 0 16px;
-  cursor: pointer;
-}
-footer .footer-bottom {
-  position: relative;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   flex-wrap: wrap;
-  border-top: 1px solid #333;
-  padding-top: 20px;
-  margin-top: 170px;
+  justify-content: space-between;
+  gap: 40px;
+  border-bottom: 2px solid white;
+  padding-bottom: 36px;
 }
-footer .footer-bottom p {
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 143%;
-  color: #c0c0c0;
-}
-footer .footer-bottom ul {
-  display: flex;
-  position: absolute;
-  top: 50px;
-  right: 5px;
-  transform: translate(-50%, -50%);
-}
-footer .footer-bottom ul li {
-  list-style: none;
-}
-footer .footer-bottom ul li a {
-  width: 30px;
-  height: 30px;
-  text-align: center;
-  font-size: 5px;
-  margin: 0 10px;
-  display: block;
-  position: relative;
-  overflow: hidden;
-  z-index: 1;
-}
-footer .footer-bottom ul li a img {
-  position: relative;
-  color: #262626;
-  transition: 0.5s;
-  z-index: 3;
-}
-footer .footer-bottom ul li a:hover img {
-  color: #fff;
-  transform: rotateY(360deg);
-}
-footer .footer-bottom ul li a:before {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #f00;
-  transition: 0.5s;
-  z-index: 2;
-}
-footer .footer-bottom ul li a:hover:before {
-  top: 0;
-}
-footer .footer-bottom ul li:nth-child(1) a:before {
-  background: #3b5999;
-  opacity: 0.6;
-}
-footer .footer-bottom ul li:nth-child(2) a:before {
-  background: #55acee;
-  opacity: 0.4;
-}
-footer .footer-bottom ul li:nth-child(3) a:before {
-  background: #f90;
-  opacity: 0.4;
-}
-footer .gallery_text2 .read_more:before {
+
+.gallery_text2 .read_more:before {
   content: "";
   display: inline-block;
   width: 32px;
   height: 32px;
-  background-color: red;
+  background-color: #000000;
   border-radius: 50%;
+  margin-bottom: -10px;
+  margin-left: -10px;
 }
-footer .burger {
-  display: none;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 24px;
-  height: 18px;
-  cursor: pointer;
+
+.gallery_text1 .read_more:before {
+  content: "";
+  display: inline-block;
+  width: 32px;
+  height: 32px;
+  background-color: #000000;
+  border-radius: 50%;
+  margin-bottom: -10px;
+  margin-left: -10px;
 }
-footer .burger span {
-  display: block;
-  height: 2px;
-  background: #fff;
-  border-radius: 2px;
-  transition: 0.3s;
+
+.gallery_text3 .read_more:before {
+  content: "";
+  display: inline-block;
+  width: 32px;
+  height: 32px;
+  background-color: #000000;
+  border-radius: 50%;
+  margin-bottom: -10px;
+  margin-left: -10px;
+}
+
+.gallery_text4 .read_more:before {
+  content: "";
+  display: inline-block;
+  width: 32px;
+  height: 32px;
+  background-color: #000000;
+  border-radius: 50%;
+  margin-bottom: -10px;
+  margin-left: -10px;
+}
+
+.help_btn:before {
+  content: "";
+  display: inline-block;
+  width: 32px;
+  height: 32px;
+  background-color: #000000;
+  border-radius: 50%;
+  margin-bottom: -10px;
+  margin-left: -40px;
 }
 
 /*# sourceMappingURL=style.css.map */
