--- a/css/style.scss
+++ b/css/style.scss
@@ -623,7 +623,6 @@ p {
   }
 }
 footer {
-  position: relative;
   background-color: #000;
   color: #c0c0c0;
   padding: 60px 20px;
@@ -632,10 +631,6 @@ footer {
   .footer-container {
     max-width: 1200px;
     margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    gap: 40px;
   }
 
   .footer-top {
@@ -643,8 +638,9 @@ footer {
     flex-wrap: wrap;
     justify-content: space-between;
     gap: 40px;
+    border-bottom: 2px solid white;
+    padding-bottom: 36px;
   }
-
   .footer-logo {
     margin-top: 100px;
 
@@ -660,10 +656,10 @@ footer {
       color: #c0c0c0;
     }
   }
-
   .footer-links {
     display: flex;
-    gap: 16px;
+    flex-wrap: wrap;
+    gap: 55px;
     margin-top: 100px;
 
 
@@ -702,192 +698,69 @@ footer {
       }
     }
   }
-
   .footer-newsletter {
-    display: block;
-    position: absolute;
-    bottom: 100px;
-
-    .newsletter-text {
-      position: absolute;
-      bottom: 20px;
-      left: 0;
-
-      &::before {
-        content: "";
-        display: block;
-        width: 1200px;
-        height: 1px;
-        background-color: #333;
-        position: absolute;
-        top: -20px;
-        left: 0;
-
-      }
-    }
-
-    .column-title {
-      display: ruby-text;
-      font-family: "Poppins", sans-serif;
-      font-size: 14px;
-      letter-spacing: 0.14em;
-      text-transform: uppercase;
-      margin-bottom: 10px;
-      color: #fff;
-    }
-
-    p {
-      margin-bottom: 15px;
-      font-family: "Poppins", sans-serif;
-      font-weight: 400;
-      font-size: 13px;
-      line-height: 154%;
-      color: #c0c0c0;
-    }
-
-    .footer-form {
-      position: absolute;
-      left: 741px;
-      width: 458px;
-      bottom: 40px;
-    }
-
-    .footer-form form {
-      display: flex;
-      border: 1px solid #fff;
-      border-radius: 8px;
-      overflow: hidden;
-
-      input {
-        flex: 1;
-        padding: 10px;
-        border: none;
-        background: #fff;
-        color: #000;
-      }
-
-      button {
-        background: #000;
-        color: #fff;
-        border: none;
-        padding: 0 16px;
-        cursor: pointer;
-      }
-    }
-  }
-
-  .footer-bottom {
-    position: relative;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
     flex-wrap: wrap;
-    border-top: 1px solid #333;
-    padding-top: 20px;
-    margin-top: 170px;
-
-    p {
-      font-family: "Poppins", sans-serif;
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 143%;
-      color: #c0c0c0;
-    }
-
-    ul {
-      display: flex;
-      position: absolute;
-      top: 50px;
-      right: 5px;
-      transform: translate(-50%, -50%);
-    }
-
-    ul li {
-      list-style: none;
-    }
-
-    ul li a {
-      width: 30px;
-      height: 30px;
-      text-align: center;
-      font-size: 5px;
-      margin: 0 10px;
-      display: block;
-      position: relative;
-      overflow: hidden;
-      z-index: 1;
-    }
-
-    ul li a img {
-      position: relative;
-      color: #262626;
-      transition: .5s;
-      z-index: 3;
-    }
-
-    ul li a:hover img {
-      color: #fff;
-      transform: rotateY(360deg);
-    }
-
-    ul li a:before {
-      content: "";
-      position: absolute;
-      top: 100%;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: #f00;
-      transition: .5s;
-      z-index: 2;
-    }
-
-    ul li a:hover:before {
-      top: 0;
-    }
-
-    ul li:nth-child(1) a:before {
-      background: #3b5999;
-      opacity: 0.6;
-    }
-
-    ul li:nth-child(2) a:before {
-      background: #55acee;
-      opacity: 0.4;
-    }
-
-    ul li:nth-child(3) a:before {
-      background: #f90;
-      opacity: 0.4;
-    }
-
-  }
-
-  .gallery_text2 .read_more:before {
-    content: "";
-    display: inline-block;
-    width: 32px;
-    height: 32px;
-    background-color: red;
-    border-radius: 50%;
-
-  }
-
-  .burger {
-    display: none;
-    flex-direction: column;
     justify-content: space-between;
-    width: 24px;
-    height: 18px;
-    cursor: pointer;
-
-    span {
-      display: block;
-      height: 2px;
-      background: #fff;
-      border-radius: 2px;
-      transition: 0.3s;
-    }
+    gap: 40px;
+    border-bottom: 2px solid white;
+    padding-bottom: 36px;
   }
+
+
 }
 
+.gallery_text2 .read_more:before {
+  content: "";
+  display: inline-block;
+  width: 32px;
+  height: 32px;
+  background-color: #000000;
+  border-radius: 50%;
+  margin-bottom: -10px;
+  margin-left: -10px;
+
+}
+.gallery_text1 .read_more:before {
+  content: "";
+  display: inline-block;
+  width: 32px;
+  height: 32px;
+  background-color: #000000;
+  border-radius: 50%;
+  margin-bottom: -10px;
+  margin-left: -10px;
+
+}
+.gallery_text3 .read_more:before {
+  content: "";
+  display: inline-block;
+  width: 32px;
+  height: 32px;
+  background-color: #000000;
+  border-radius: 50%;
+  margin-bottom: -10px;
+  margin-left: -10px;
+}
+.gallery_text4 .read_more:before {
+  content: "";
+  display: inline-block;
+  width: 32px;
+  height: 32px;
+  background-color: #000000;
+  border-radius: 50%;
+  margin-bottom: -10px;
+  margin-left: -10px;
+
+}
+.help_btn:before {
+  content: "";
+  display: inline-block;
+  width: 32px;
+  height: 32px;
+  background-color: #000000;
+  border-radius: 50%;
+  margin-bottom: -10px;
+  margin-left: -40px;
+
+}
